hphp/hack/test/typecheck/new_inference/eager_solve/lambda3.php.like_types.exp
File "lambda3.php", line 17, characters 8-9:
Invalid argument (Typing[4110])
File "lambda3.php", line 16, characters 35-35:
Expected T
File "lambda3.php", line 15, characters 29-29:
  via this generic T
File "lambda3.php", line 16, characters 42-42:
But got dynamic because it is an unenforceable type
File "lambda3.php", line 8, characters 8-9:
Invalid argument (Typing[4110])
File "lambda3.php", line 4, characters 13-13:
Expected T
File "lambda3.php", line 5, characters 46-46:
  via this generic T
File "lambda3.php", line 15, characters 29-29:
  via this generic T
File "lambda3.php", line 6, characters 24-24:
But got dynamic because it is an unenforceable type
